fix modal shifting!

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -8,7 +8,7 @@
   }
 
   body {
-    padding-left: calc(100vw - 100%);
+    /*padding-left: calc(100vw - 100%); it centralize the content but does not work with react-remove-scroll*/
     min-height: 100vh;
     @apply bg-white dark:bg-black transition-colors duration-700 overflow-y-scroll antialiased
   }
